--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=spring-security
 spring.security.user.name=test
 spring.security.user.password=test
 
+server.servlet.session.cookie.same-site=strict
+
